# phrasegen

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
phrasegen/: __init__.py  api.py
